# agent-output

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/purelib/: agent_output_bootstrap.pth
src/agent_output/: __init__.py  agent_detector.py  bootstrap.py  execution.py  pytest_plugin.py
src/agent_output/drivers/: base.py  pytest_driver.py  unittest_driver.py
tests/: helpers.py
tests/drivers/: test_edge_cases.py  test_pytest.py  test_unittest.py
tests/fixtures/pytest/: test_binary_stdout.py  test_error.py  test_failing.py  test_multiple_failures.py  test_parametrize.py  test_redirect_stdout.py  test_skipped.py  test_stdout_large.py  test_stdout_noise.py  test_subprocess_call.py  test_unicode.py  test_unicode_names.py  test_warnings.py  test_xfail.py
tests/fixtures/unittest/: test_error.py  test_failing.py  test_multiple_failures.py  test_passing.py  test_skipped.py
