[project]
name = "agent-output"
version = "0.1.0"
description = "Drastically reduce token consumption for unittest and pytest"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ai-agent-detector>=0.2.0",
    "pytest>=8.0",
]

[project.entry-points."pytest11"]
agent_output = "agent_output.pytest_plugin"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { purelib = "data/purelib" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
]
