[project]
name = "agent-output"
version = "0.1.2"
description = "Drastically reduce token consumption for unittest and pytest runs"
readme = "README.md"
authors = [
    { name = "Einenlum", email = "contact@einenlum.com" }
]
requires-python = ">=3.11"
dependencies = [
    "ai-agent-detector>=0.2.0",
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
]

[project.entry-points."pytest11"]
agent_output = "agent_output.pytest_plugin"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { purelib = "data/purelib" }

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "tests/fixtures/*"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=8.0",
    "ruff>=0.15.10",
]
